[gd_scene load_steps=4 format=3 uid="uid://b7bc5y8xsmbqd"]

[ext_resource type="Script" path="res://scripts/menus/difficulty_select.gd" id="1_8uf20"]
[ext_resource type="Texture2D" uid="uid://hnq7r65v0tk1" path="res://textures/playBackground.jpg" id="1_n4bea"]
[ext_resource type="FontFile" uid="uid://ccf0qqfxgkxs5" path="res://PressStart2P-Regular.ttf" id="2_ofj78"]

[node name="DifficultySelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8uf20")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_n4bea")
expand_mode = 2

[node name="MenuName" type="Label" parent="."]
modulate = Color(1, 0, 0, 1)
layout_mode = 0
offset_left = 24.0
offset_top = 23.0
offset_right = 184.0
offset_bottom = 46.0
scale = Vector2(1.5, 1.5)
theme_override_fonts/font = ExtResource("2_ofj78")
text = "BEGIN_YOUR_TALE"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 23.0
offset_top = -184.0
offset_right = 335.0
offset_bottom = 22.0
grow_vertical = 2

[node name="EasyModeButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_ofj78")
text = "EASY_MODE_NAME"

[node name="NormalModeButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_ofj78")
text = "NORMAL_MODE_NAME"

[node name="HardModeButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_ofj78")
text = "HARD_MODE_NAME"

[node name="VeryHardModeButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_ofj78")
text = "VERY_HARD_MODE_NAME"

[node name="InsaneModeButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_ofj78")
text = "INSANE_MODE_NAME"

[node name="MemeModeButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_ofj78")
text = "MEME_MODE_NAME"

[node name="DifficultyDescriptionLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -11.5
offset_right = 900.0
offset_bottom = 11.5
grow_vertical = 2
scale = Vector2(0.698764, 0.628825)
autowrap_mode = 2

[connection signal="mouse_entered" from="VBoxContainer/EasyModeButton" to="." method="_on_easy_mode_button_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/EasyModeButton" to="." method="_on_easy_mode_button_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/NormalModeButton" to="." method="_on_normal_mode_button_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/NormalModeButton" to="." method="_on_normal_mode_button_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/HardModeButton" to="." method="_on_hard_mode_button_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/HardModeButton" to="." method="_on_hard_mode_button_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/VeryHardModeButton" to="." method="_on_very_hard_mode_button_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/VeryHardModeButton" to="." method="_on_very_hard_mode_button_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/InsaneModeButton" to="." method="_on_insane_mode_button_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/InsaneModeButton" to="." method="_on_insane_mode_button_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/MemeModeButton" to="." method="_on_meme_mode_button_mouse_entered"]
